--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,194 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    
+
 }
 
+/* Header Style */
 
-.top-header-flex{
+.top-header-flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 1% 10%;
+    padding: 1% 16%;
     background: rgb(255, 115, 0);
 
 }
 
-nav a{
+.nav-header a {
     text-decoration: none;
     color: white;
     font-weight: bold;
-   
-   
-}   
 
-.padding-left{
+
+}
+
+.padding-left {
     padding-left: 5px
 }
 
-.logo-container{
+.logo-container {
     width: 10%;
 }
 
-header .logo{
+header .logo {
     width: 100%;
-    
+
 }
 
-.header-icons{
+.header-icons {
     color: white;
 
 }
 
-.padding-right{
+.padding-right {
     padding-right: 8px;
 }
 
+
+/* ------------------------------------ */
+
+/* Main Seciton Style */
+
+.main-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5% 16%;
+    flex-wrap: wrap;
+}
+
+.image {
+    width: 415px;
+    height: 600px;
+
+}
+
+.red {
+    background-color: red;
+    color: white;
+    width: 50px;
+    text-align: center;
+    font-size: 12px;
+    padding: 2px;
+    position: absolute;
+    bottom: 80px;
+
+}
+
+.green {
+    background-color: green;
+    color: white;
+    width: 100px;
+    text-align: center;
+    font-size: 12px;
+    padding: 2px;
+    position: absolute;
+    bottom: 80px;
+    left: 55px;
+}
+
+.green.last {
+    left: 0;
+}
+
+.solid-heart {
+    background-color: white;
+    width: 8%;
+    height: 35px;
+    padding: 9px 7px;
+    position: absolute;
+    bottom: 607px;
+    left: 381px;
+}
+
+.solid-heart:hover i.fa-heart {
+    color: red;
+}
+
+
+.descripton {
+    line-height: 15px;
+}
+
+.brand {
+    font-size: 12px;
+}
+
+.style {
+    font-size: 13px;
+    font-weight: 800;
+}
+
+.d-price {
+    font-size: 12px;
+    color: red;
+    display: inline;
+    font-weight: 900;
+}
+
+.price {
+    font-size: 12px;
+    text-decoration: line-through;
+    display: inline;
+
+}
+
+
+.container {
+    position: relative;
+    top: 0;
+    left: 0;
+    margin-top: 40px;
+
+}
+
+* .image-b {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 415px;
+    height: 600px;
+
+}
+
+.container:hover .image-b {
+    opacity: 1;
+
+}
+ 
+/* -------------------------------------- */
+
+/* Footer Section Style */
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1% 16%;
+    background: black;
+}
+
+.footer-info h2,
+.nav-footer a {
+    color: white;
+    margin-bottom: 10px;
+    text-decoration: none;
+    padding-right: 10px;
+}
+
+.icon-footer p {
+    color: white;
+    
+}
+
+.icon-footer i.fa-brands {
+    color: white;
+    padding: 3px;
+    font-size: 20px;
+    margin-top: 10px;
+}
