--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,20 @@
 
 }
 
+body {
+    padding-top: 90px;
+}
+
 /* Header Style */
+
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999; 
+}
 
 .top-header-flex {
     display: flex;
