--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,6 @@
 
 }
 
-body {
-    padding-top: 60px;
-}
 
 /* Header Style */
 
@@ -19,14 +16,16 @@ header {
     left: 0;
     width: 100%;
     z-index: 999; 
+    box-shadow: 0 1px 3px #666;
 }
+
 
 .top-header-flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 1% 16%;
+    padding: 1% 8%;
     background: rgb(255, 115, 0);
 
 }
@@ -66,11 +65,16 @@ header .logo {
 
 /* Main Seciton Style */
 
+main{
+    margin-top: 50px;
+}
+
 .main-container {
     display: flex;
     justify-content: space-between;
-    padding: 1.5% 16%;
+    padding: 1.5% 8%;
     flex-wrap: wrap;
+    
 }
 
 .image {
@@ -79,7 +83,10 @@ header .logo {
 
 }
 
-.red {
+
+
+
+.red-badge {
     background-color: red;
     color: white;
     width: 50px;
@@ -91,7 +98,7 @@ header .logo {
 
 }
 
-.green {
+.green-badge {
     background-color: green;
     color: white;
     width: 100px;
@@ -103,7 +110,7 @@ header .logo {
     left: 55px;
 }
 
-.green.last {
+.green-badge.last {
     left: 0;
 }
 
@@ -113,12 +120,13 @@ header .logo {
     height: 35px;
     padding: 9px 7px;
     position: absolute;
-    bottom: 607px;
-    left: 381px;
+    top: 8px;
+    right: 0px;
 }
 
 .solid-heart:hover i.fa-heart {
     color: red;
+    cursor: pointer;
 }
 
 
@@ -158,7 +166,7 @@ header .logo {
 
 }
 
-* .image-b {
+.image-b {
     position: absolute;
     top: 0;
     left: 0;
@@ -182,7 +190,7 @@ header .logo {
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    padding: 1% 16%;
+    padding: 1% 8%;
     background: black;
 }
 
